--- a/WebApi/Dockerfile
+++ b/WebApi/Dockerfile
@@ -1,16 +1,15 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
+# Dotnet Base Image
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
-# EXPOSE 80
-# EXPOSE 443
 
-# Set environment variables
+# Environment Variables
 ENV ASPNETCORE_URLS="http://*:5000"
 ENV ASPNETCORE_ENVIRONMENT="Development"
 
-# Open port
-EXPOSE 5000/tcp
+# Application Port
+EXPOSE 5001/tcp
+
+# Build instructions
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
@@ -27,5 +26,4 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 
-# ENTRYPOINT ["dotnet", "WebApi.dll"]
-# CMD ASPNETCORE_URLS=http://*:$PORT dotnet WebApi.dll
+ENTRYPOINT ["dotnet", "WebApi.dll"]
